# FfmpegDemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/robert/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: hello-jni.cpp
app/src/main/java/com/robert/ffmpegdemo/: FFmpegModule.kt  MainActivity.kt
app/src/test/java/com/robert/ffmpegdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
